# cosserat

./: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/forcefield/: BeamHookeLawForceFieldTest.cpp
Tests/mapping/: BeamContactMappingTest.cpp  CMakeLists.txt
cmake/: FindGLEW.cmake
examples/python3/: CosseratBeamFallingUnderTheEffectOfGravity.py  SSLM_two_beams.py  simulate_ctr_two_tubes.py  two_beams_new_pipeline.py
examples/python3/actuators/mesh/: Tige.STL  Trompe.STL  disque.stl  finger.stl  finger.vtk
examples/python3/contact examples/: SSLM_two_beams.py  classic_pipeline_detection_times.txt  simulate_ctr_two_tubes.py  timing_plots.py  two_beams_new_pipeline.py
examples/python3/contact examples/cantiliver beam/: two_beams_new_pipeline.py
examples/python3/contact examples/contact points/: cantiliver_beam.py  cantiliver_beam_feeder.py  concentric_straight_beams.py  concentric_straight_beams_feeder.py  contact_debug.csv  sliding_cantilivear_beam.py  sliding_cantilivear_beam_contact_feeder.py  sofa_scene_launcher.py
examples/python3/contact examples/contact points/concentric beams/: Diagnosis_file_explanation.aux  Diagnosis_file_explanation.out  Diagnosis_file_explanation.tex  concentric_straight_beams.py  concentric_straight_beams_driven_spring.py  concentric_straight_beams_overwriting_DoFs.py  concentric_straight_beams_rolling.py  concentric_straight_beams_rolling_spring.py  contact_debug.csv  ctr_two_tube_dynamic_diagnosis.csv  ctr_two_tube_overwrite_DoFs.py  ctr_two_tube_quasi-static.csv  ctr_two_tube_spring_driven.py  ctr_two_tube_spring_driven_diag.csv  ctr_two_tubes_dynamic.py  ctr_two_tubes_quasi-static.py  curved_in_straight_four_contact_points.py  curved_in_straight_three_contact_points.py  curved_in_straight_two_contact_points.py  gui.py  gui2.py  init_monitoring.py  live_monitor.py  protruded_shape_monitor.py
examples/python3/contact examples/contact points/ctr/: ctr_curved_in_straight.py  ctr_two_tubes.py  ctr_two_tubes_contact_feeder.py  curved_in_straight.py  curved_in_straight_2.py  curved_in_straight_feeder.py  curved_in_straight_springs.py  garbage.py  gui.py  gui2.py  init_monitoring.py
examples/python3/contact examples/contact points/ctr/comparison_between_ulc_and_cpuc/: compare_controllers.py  compare_scene.py  comparison_cpulc.npz  comparison_feeder.npz  ctr_two_tubes.py  live_monitor.py  plot_comparison.py  run_comparison.py
examples/python3/contact examples/contact points/ctr/comparison_between_ulc_and_cpuc/plots/: summary.txt
examples/python3/contact examples/old simulations/: ssim_pipeline_detection_times.txt  timing_plots.py  two_beams_classic_pipeline.py  two_beams_new_pipeline.py  two_beams_new_pipeline_with_timer.py
examples/python3/cosserat/: cosseratObject.py
src/Cosserat/: CMakeLists.txt  initCosserat.cpp
src/Cosserat/constraint/: ContactPointsUnilateralConstraint.cpp  ContactPointsUnilateralConstraint.h  ContactPointsUnilateralConstraint2.cpp  ContactPointsUnilateralConstraint2.h
src/Cosserat/engine/: ContactTriad.h
src/Cosserat/intersection/: ContactFeeder.cpp  ContactFeeder.h  SphereSweptIntersectionMethod.cpp  SphereSweptIntersectionMethod.h  SphereSweptIntersectionMethod2.cpp  old_SphereSweptIntersectionMethod.cpp  old_SphereSweptIntersectionMethod.h
src/Cosserat/mapping/: BeamContactMapping.cpp  BeamContactMapping.h  BeamContactMapping_math.aux  BeamContactMapping_math.out  BeamContactMapping_math.tex  BeamContactMapping_math.toc  DiscreteCosseratMapping.inl
